[package]
name = "backend_derive"
version = "0.1.0"
authors = ["Rodrigo Corrêa <rcelha@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "1.0.33", features = ["visit"] }

[lib]
proc-macro = true
