[package]
name = "backend_impl"
version = "0.1.0"
authors = ["Rodrigo Corrêa <rcelha@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
backend = { path = "../backend" }
backend_derive = { path = "../backend_derive" }
